Add gradle changes

--- a/build.gradle
+++ b/build.gradle
@@ -15,10 +15,20 @@ buildscript {
 }
 
 allprojects {
+    version = VERSION_NAME
+    group = GROUP
+
     repositories {
+        mavenCentral()
         jcenter()
     }
 }
+
+def isReleaseBuild() {
+    return version.contains("SNAPSHOT") == false
+}
+
+apply plugin: 'android-reporting'
 
 task clean(type: Delete) {
     delete rootProject.buildDir
