--- a/example/build.gradle
+++ b/example/build.gradle
@@ -30,8 +30,10 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.0.1'
     testCompile 'junit:junit:4.12'
-    compile project(path: ':library')
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
+   // compile files('libs/unmaterialtabs-0.1a-sources.jar')
+    compile project(path: ':library')
 }
 repositories {
     mavenCentral()
